[tool.poetry]
name = "wlink"
version = "0.1.0"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "*"
construct = "*"
trio = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-trio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
