[tool.poetry]
name = "wlink"
version = "0.1.1"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.1"
loguru = "^0.6"
construct = "^2"
trio = "^0.20"
cryptography = "^36"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-trio = "*"

#[tool.poetry.op]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
